# TNCG15-ray-tracer

./: .gitignore  CMakeLists.txt
include/: camera.h  color.h  direction.h  intersectable.h  math.h  pixel.h  quad.h  ray.h  scene.h  sceneObject.h  sphere.h  surface.h  triangle.h  utils.h  vertex.h
src/: camera.cpp  color.cpp  direction.cpp  main.cpp  pixel.cpp  quad.cpp  ray.cpp  scene.cpp  sphere.cpp  surface.cpp  triangle.cpp  vertex.cpp
test/: CMakeLists.txt  main.cpp  ray.cpp  sphere.cpp  triangle.cpp  utils.cpp
